syntax = "proto3";

option csharp_namespace = "Ecommerce";

import "google/type/money.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service ProductService 
{
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc GetProducts (GetProductsWithPaginationRequest) returns (GetProductsWithPaginationResponse);
  rpc CreateProduct (CreateProductRequest) returns (OperationStatusResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (OperationStatusResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (OperationStatusResponse);
  rpc GetSortedProducts (GetSortedProductsRequest) returns (GetSortedProductsResponse);
  rpc GetFiltredProducts (FilterProductsRequest) returns (GetProductsResponse);
}

message GetProductRequest 
{
  int32 id = 1;
}

message GetProductsWithPaginationRequest
{
    int32 elements_on_page_count = 1;
    int32 current_page_number = 2;
}

message CreateProductRequest 
{
  ProductInfo product = 1;
}

message UpdateProductRequest 
{
  int32 id = 1;
  ProductInfo product = 2;
}

message DeleteProductRequest 
{
  int32 id = 1;
}

message GetSortedProductsRequest
{
    string argument = 1;
    bool is_revese = 2;
}

message FilterProductsRequest
{
    google.protobuf.StringValue name = 1;
    google.protobuf.UInt32Value min_price = 2;
    google.protobuf.UInt32Value max_price = 3;
}

message GetProductResponse 
{
  oneof result 
  {
    ProductFound found = 1;
    ProductNotFound not_found = 2;
  }

  message ProductFound 
  {
    ProductInfo product = 1;
  }

  message ProductNotFound 
  {
    string message = 1;
  }
}

message GetProductsResponse 
{
    repeated ProductInfoWithID products = 1;
}

message GetProductsWithPaginationResponse
{
    int32 all_elements_count = 1;
    int32 current_page_number = 2;
    int32 elements_on_curent_page_count = 3;
    repeated ProductInfoWithID products = 4;
}

message GetSortedProductsResponse
{
    oneof result 
    {
        SuccessSort success_sort = 1;
        FailureSort failure_sort = 2;
    }

    message SuccessSort
    {
        repeated ProductInfoWithID products = 1;
    }

    message FailureSort
    {
        string message = 1;
    }
}

message OperationStatusResponse 
{
  Status status = 1;
  string message = 2;
}

message ProductInfo 
{
  string name = 1;
  string description = 2;
  google.type.Money price = 3;
  int32 stock = 4;
}

message ProductInfoWithID
{
    int32 id = 1;
    string name = 2;
    string description = 3;
    google.type.Money price = 4;
    int32 stock = 5;
}

enum Status 
{
    SUCCESS = 0;
    FAILURE = 1;
}